hphp/test/slow/readonly/elem_cow_unset.hhas.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Read-Only collections cannot be mutated.' in %s/elem_cow_unset.hhas:12
%A
